--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -9,4 +9,7 @@ parserOptions:
 rules: {
   no-console: 0,
   import/extensions: 0,
+  no-param-reassign: 0,
+  import/no-extraneous-dependencies: ["error", {"devDependencies": true}],
+  no-underscore-dangle: [2, { "allow": ["__filename", "__dirname"] }],
 }
