--- a/.github/workflows/test-and-lint.yml
+++ b/.github/workflows/test-and-lint.yml
@@ -18,7 +18,7 @@ jobs:
           cache: npm
 
       - run: make install
-      # - run: make test
+      - run: make test
       - run: make lint
 
       - name: test-coverage
