--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "RSS-aggregator",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "npx jest",
     "build": "npx webpack",
@@ -18,19 +19,44 @@
     "url": "https://github.com/sunn-shinne/frontend-project-lvl3/issues"
   },
   "homepage": "https://github.com/sunn-shinne/frontend-project-lvl3#readme",
+  "jest": {
+    "verbose": true,
+    "testEnvironment": "jsdom",
+    "testEnvironmentOptions": {
+      "url": "http://localhost/"
+    },
+    "transform": {}
+  },
   "devDependencies": {
+    "@babel/core": "^7.17.10",
+    "@babel/eslint-parser": "^7.17.0",
+    "@babel/preset-env": "^7.17.10",
+    "@jest/globals": "^28.1.0",
+    "@testing-library/dom": "^8.13.0",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/user-event": "^14.1.1",
+    "babel-jest": "^28.1.0",
+    "babel-loader": "^8.2.5",
     "css-loader": "^6.7.1",
+    "debug": "^4.3.4",
     "eslint": "^8.14.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jest": "^26.1.5",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
-    "jest": "^28.0.3",
+    "jest": "^28.1.0",
+    "jest-cli": "^28.1.0",
+    "jest-environment-jsdom": "^28.1.0",
+    "nock": "^13.2.4",
     "style-loader": "^3.3.1",
     "webpack": "^5.72.0",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.9.0"
   },
   "dependencies": {
-    "bootstrap": "^5.1.3"
+    "bootstrap": "^5.1.3",
+    "on-change": "^4.0.0",
+    "yup": "^0.32.11"
   }
 }
