--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.1.3",
+    "i18next": "^21.8.1",
     "on-change": "^4.0.0",
     "yup": "^0.32.11"
   }
