--- a/package.json
+++ b/package.json
@@ -55,8 +55,10 @@
     "webpack-dev-server": "^4.9.0"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "i18next": "^21.8.1",
+    "lodash": "^4.17.21",
     "on-change": "^4.0.0",
     "yup": "^0.32.11"
   }
